@@ -34,7 +34,7 @@ public class HttpClientBinder
 
     private HttpClientBinder(Binder binder)
     {
-        this.binder = checkNotNull(binder, "binder is null");
+        this.binder = checkNotNull(binder, "binder is null").skipSources(getClass());
     }
 
     public static HttpClientBinder httpClientBinder(Binder binder)
