@@ -2,6 +2,7 @@
 
 - Change kerberos service principal format to correct serviceName@host
 - Replace Guava Optional in TestingNodeModule and JettyHttpClient
+- Report correct binding source for custom binders
 
 * 0.112
 
